--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta 
+    http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; frame-src https://*.google.nl;">
 
-  <title>The HTML</title>
-  <meta name="description" content="The HTML">
+  <title>Google Trends</title>
+  <meta name="description" content="Google Trends">
   <meta name="author" content="SitePoint">
-  <style>
-  	html, body, iframe {
-		width: 100%;
-		height: 100%;
-	}
-  </style>
-
+  <style> html, body, iframe { width: 100%; height: 100%; } </style>
 </head>
 
 <body>
-	<script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/2152_RC04/embed_loader.js"></script> <script type="text/javascript"> trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"social network","geo":"NL","time":"today 12-m"}],"category":0,"property":""}, {"exploreQuery":"geo=NL&q=social%20network&date=today 12-m","guestPath":"https://trends.google.nl:443/trends/embed/"}); </script>
-
+  <script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/2152_RC04/embed_loader.js"></script>
+  <script type="text/javascript">
+    trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"social network","geo":"NL","time":"today 12-m"}],"category":0,"property":""}, {"exploreQuery":"geo=NL&q=social%20network&date=today 12-m","guestPath":"https://trends.google.nl:443/trends/embed/"});
+  </script>
 </body>
 </html>
