--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta 
     http-equiv="Content-Security-Policy"
-    content="default-src 'self'; script-src 'self' 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; frame-src https://*.google.nl;">
+    content="default-src 'self'; script-src 'self' 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; frame-src https://trends.google.nl;">
 
   <title>Google Trends</title>
   <meta name="description" content="Google Trends">
