--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta 
+  <meta http-equiv="X-Frame-Options" content="sameorigin">
+  <meta
     http-equiv="Content-Security-Policy"
     content="default-src 'self'; script-src 'self' 'unsafe-inline' https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; frame-src https://trends.google.nl;">
 
@@ -16,7 +17,20 @@
 <body>
   <script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/2152_RC04/embed_loader.js"></script>
   <script type="text/javascript">
-    trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"social network","geo":"NL","time":"today 12-m"}],"category":0,"property":""}, {"exploreQuery":"geo=NL&q=social%20network&date=today 12-m","guestPath":"https://trends.google.nl:443/trends/embed/"});
+    trends.embed.renderExploreWidget("TIMESERIES", {
+        "comparisonItem": [
+            {
+                "keyword":"social network",
+                "geo":"NL",
+                "time":"today 12-m",
+            }
+        ],
+        "category": 0,
+        "property": ""
+    }, {
+        "exploreQuery": "geo=NL&q=social%20network&date=today 12-m",
+        "guestPath": "https://trends.google.nl:443/trends/embed/"
+    });
   </script>
 </body>
 </html>
